f5e66296-a68f-4fae-ab34-616938e14a6b/bc5fa525-1f32-4c53-bf17-b98dd59ff12e/9e747131-cfc7-4b99-bf38-6fccfc36af88/RandR/kubernates/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service-e90ea533-89c5-4761-af3b-4b2473c47e85
  namespace: 2e49f282-85d5-4866-af7d-8133a75e6769
  labels:
    app: rest-app-e90ea533-89c5-4761-af3b-4b2473c47e85
spec:
  selector:
    app: rest-app-e90ea533-89c5-4761-af3b-4b2473c47e85
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
